--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:23:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:23:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ Not started</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -193,7 +193,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
@@ -227,11 +227,11 @@ Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -241,13 +241,13 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -273,7 +273,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Talor Gooch +1
@@ -291,7 +291,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td class="greyout leftborder">Matthew Fitzpatrick -1
@@ -307,7 +307,7 @@ Not started</td>
       <td>Justin Thomas -3
 -2 thru 3</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td class="greyout leftborder">Marc Leishman +2
@@ -323,11 +323,11 @@ Not started</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Jon Rahm +3
 +1 thru 8</td>
     </tr>
@@ -337,7 +337,7 @@ E thru 1</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Matthew Fitzpatrick -1
 -1 thru 4</td>
       <td>Patrick Cantlay +2
@@ -353,11 +353,11 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Viktor Hovland(W) +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Tyrrell Hatton +5
 +3 thru 8</td>
       <td class="greyout">Sam Burns
@@ -371,7 +371,7 @@ Not started</td>
       <td>Dustin Johnson(W) -2
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +2
@@ -391,7 +391,7 @@ Not started</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -419,11 +419,11 @@ E thru 9</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -435,7 +435,7 @@ Not started</td>
       <td>Justin Thomas -3
 -2 thru 3</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy(W) +2
 E thru 9</td>
       <td class="greyout leftborder">Tiger Woods +3
@@ -449,7 +449,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -3
 -2 thru 3</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Patrick Cantlay +2
@@ -465,7 +465,7 @@ Missed Cut</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Billy Horschel +5
@@ -481,7 +481,7 @@ Missed Cut</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Talor Gooch +1
@@ -501,7 +501,7 @@ E thru 1</td>
       <td>Patrick Cantlay(W) +2
 +1 thru 5</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +3
 +1 thru 8</td>
       <td class="greyout">Sam Burns
@@ -521,7 +521,7 @@ E thru 9</td>
       <td class="greyout leftborder">Tiger Woods(W) +3
 +2 thru 6</td>
       <td class="greyout">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -543,7 +543,7 @@ Missed Cut</td>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
@@ -553,7 +553,7 @@ E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +3
 +1 thru 8</td>
       <td class="greyout">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -561,11 +561,11 @@ E thru 1</td>
       <td>Justin Thomas -3
 -2 thru 3</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -575,7 +575,7 @@ Missed Cut</td>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners(W) -1
@@ -613,7 +613,7 @@ E thru 1</td>
       <td>Joaquin Niemann -1
 E thru 2</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
@@ -647,7 +647,7 @@ E thru 1</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -661,7 +661,7 @@ E thru 9</td>
       <td>Jon Rahm(W) +3
 +1 thru 8</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -691,7 +691,7 @@ Missed Cut</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +3
 +1 thru 8</td>
       <td class="greyout leftborder">Sam Burns
@@ -709,7 +709,7 @@ E thru 1</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Tiger Woods +3
 +2 thru 6</td>
       <td class="greyout">Gary Woodland
@@ -741,7 +741,7 @@ Missed Cut</td>
       <td>Jon Rahm(W) +3
 +1 thru 8</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -757,7 +757,7 @@ E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Viktor Hovland(W) +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +3
 +1 thru 8</td>
       <td class="greyout">Xander Schauffele
@@ -767,7 +767,7 @@ Missed Cut</td>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">3</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Jon Rahm(W) +3
@@ -805,7 +805,7 @@ E thru 9</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +3
 +1 thru 8</td>
       <td class="greyout">Jordan Spieth
@@ -819,7 +819,7 @@ Missed Cut</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +3
 +1 thru 8</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -863,13 +863,13 @@ Missed Cut</td>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">6</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td>Jon Rahm(W) +3
 +1 thru 8</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Bubba Watson +7
 +5 thru 7</td>
       <td class="greyout">Jordan Spieth
@@ -883,7 +883,7 @@ Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +3
 +1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth(W)
@@ -913,7 +913,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 E thru 1</td>
       <td>Viktor Hovland(W) +3
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +3
 +1 thru 8</td>
       <td>Patrick Reed +4
