--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:23:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:23:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -179,7 +179,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td class="greyout leftborder">Matthew Fitzpatrick -1
@@ -215,7 +215,7 @@ E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td class="greyout leftborder">Viktor Hovland(W) +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -225,7 +225,7 @@ Missed Cut</td>
       <td>Justin Thomas -3
 -2 thru 3</td>
       <td>Cameron Smith -2
-Not started</td>
+E thru 1</td>
       <td>Joaquin Niemann -1
 E thru 2</td>
       <td>Tommy Fleetwood(W) +2
@@ -233,7 +233,7 @@ E thru 2</td>
       <td class="greyout leftborder">Rory McIlroy +2
 E thru 9</td>
       <td class="greyout">Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -241,11 +241,11 @@ E thru 9</td>
       <td>Justin Thomas -3
 -2 thru 3</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -271,7 +271,7 @@ Missed Cut</td>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">1</td>
       <td>Cameron Smith(W) -2
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa -1
 E thru 1</td>
       <td>Rory McIlroy +2
@@ -339,7 +339,7 @@ Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Viktor Hovland +3
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +3
 +1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth(W)
@@ -353,7 +353,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 E thru 1</td>
       <td>Viktor Hovland(W) +3
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm +3
 +1 thru 8</td>
       <td>Patrick Reed +4
