--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:25:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:25:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -167,7 +167,7 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout">Tony Finau +4
 +2 thru 12</td>
     </tr>
@@ -205,15 +205,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
-      <td>Webb Simpson E
--1 thru 5</td>
+      <td>Webb Simpson -1
+-2 thru 6</td>
       <td class="greyout leftborder">Jon Rahm(W) +3
 +1 thru 8</td>
       <td class="greyout">Xander Schauffele
@@ -229,7 +229,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 E thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 17</td>
       <td class="greyout">Brooks Koepka
@@ -295,7 +295,7 @@ E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td class="greyout leftborder">Matthew Fitzpatrick -1
--1 thru 4</td>
+-1 thru 5</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -339,9 +339,9 @@ Not started</td>
       <td>Cameron Smith(W) -2
 E thru 1</td>
       <td>Matthew Fitzpatrick -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -375,7 +375,7 @@ E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -387,7 +387,7 @@ Not started</td>
       <td>Justin Thomas(W) -3
 -2 thru 3</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -403,7 +403,7 @@ Not started</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td class="greyout leftborder">Jon Rahm +3
@@ -421,7 +421,7 @@ Not started</td>
       <td>Cameron Smith -2
 E thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 17</td>
       <td class="greyout">Brooks Koepka
@@ -453,7 +453,7 @@ E thru 1</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -467,7 +467,7 @@ Not started</td>
       <td>Cameron Smith -2
 E thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Billy Horschel +5
 +2 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -499,7 +499,7 @@ Not started</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Patrick Cantlay(W) +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +3
@@ -549,7 +549,7 @@ E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout leftborder">Jon Rahm(W) +3
 +1 thru 8</td>
       <td class="greyout">Viktor Hovland +3
@@ -595,7 +595,7 @@ Not started</td>
       <td>Dustin Johnson(W) -2
 Not started</td>
       <td>Matthew Fitzpatrick -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Tony Finau +4
 +2 thru 12</td>
       <td class="greyout leftborder">Louis Oosthuizen
@@ -627,7 +627,7 @@ Not started</td>
       <td>Justin Thomas -3
 -2 thru 3</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Jon Rahm(W) +3
 +1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -675,7 +675,7 @@ Not started</td>
       <td>Collin Morikawa(W) -1
 E thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Jon Rahm +3
 +1 thru 8</td>
       <td class="greyout leftborder">Paul Casey
@@ -755,7 +755,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 E thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Viktor Hovland(W) +3
 -1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +3
@@ -785,7 +785,7 @@ Missed Cut</td>
       <td>Justin Thomas -3
 -2 thru 3</td>
       <td>Patrick Cantlay(W) +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td>Jon Rahm +3
@@ -803,7 +803,7 @@ Not started</td>
       <td>Rory McIlroy(W) +2
 E thru 9</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +3
@@ -817,7 +817,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -3
 -2 thru 3</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
       <td>Jon Rahm +3
@@ -851,7 +851,7 @@ Not started</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Adam Scott +12
 +8 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka(W)
@@ -881,7 +881,7 @@ Missed Cut</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
       <td>Jon Rahm +3
@@ -897,7 +897,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 E thru 1</td>
       <td>Patrick Cantlay +2
-+1 thru 5</td>
++1 thru 6</td>
       <td>Jon Rahm(W) +3
 +1 thru 8</td>
       <td>Tony Finau +4
