--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:35:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:36:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ Not started</td>
 E thru 1</td>
       <td>Webb Simpson -1
 -2 thru 6</td>
-      <td class="greyout leftborder">Jon Rahm(W) +3
-+1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
++2 thru 9</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -252,22 +252,6 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Corey Conners -1
-E thru 1</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler -8
@@ -300,6 +284,22 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler(W) -8
+Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 2</td>
+      <td>Corey Conners -1
+E thru 1</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-9</td>
       <td>Hideki Matsuyama -3
@@ -328,8 +328,8 @@ E thru 1</td>
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 17</td>
-      <td class="greyout">Jon Rahm +3
-+1 thru 8</td>
+      <td class="greyout">Jon Rahm +4
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -406,10 +406,10 @@ E thru 1</td>
 +1 thru 6</td>
       <td>Rory McIlroy +2
 E thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +3
-+1 thru 8</td>
-      <td class="greyout">Robert MacIntyre +4
+      <td class="greyout leftborder">Robert MacIntyre +4
 +2 thru 7</td>
+      <td class="greyout">Jon Rahm +4
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -486,8 +486,8 @@ E thru 1</td>
 E thru 1</td>
       <td>Talor Gooch +1
 -1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm(W) +3
-+1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
++2 thru 9</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -502,8 +502,8 @@ E thru 1</td>
 +1 thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +3
-+1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 9</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -534,8 +534,8 @@ E thru 10</td>
 E thru 1</td>
       <td>Rory McIlroy +2
 E thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +3
-+1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 9</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -550,10 +550,10 @@ E thru 1</td>
 E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
-      <td class="greyout leftborder">Jon Rahm(W) +3
-+1 thru 8</td>
-      <td class="greyout">Viktor Hovland +3
+      <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 17</td>
+      <td class="greyout">Jon Rahm(W) +4
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -567,22 +567,6 @@ E thru 1</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -2
-E thru 1</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Corey Conners(W) -1
-E thru 1</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -620,16 +604,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-1</td>
+      <td>Cameron Smith -2
+E thru 1</td>
+      <td>Will Zalatoris -2
+-1 thru 2</td>
+      <td>Corey Conners(W) -1
+E thru 1</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">0</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Justin Thomas -3
 -2 thru 4</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
-      <td>Jon Rahm(W) +3
-+1 thru 8</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -652,54 +652,6 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Rory McIlroy +2
-E thru 10</td>
-      <td>Jon Rahm(W) +3
-+1 thru 8</td>
-      <td>Viktor Hovland +3
--1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Collin Morikawa(W) -1
-E thru 2</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">1</td>
-      <td>Justin Thomas(W) -3
--2 thru 4</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Viktor Hovland +3
--1 thru 17</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas -3
@@ -716,35 +668,19 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">1</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Corey Conners -1
-E thru 1</td>
+      <td>Scottie Scheffler -8
+Not started</td>
       <td>Rory McIlroy +2
 E thru 10</td>
-      <td>Jon Rahm(W) +3
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">1</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Jon Rahm(W) +3
-+1 thru 8</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -758,39 +694,87 @@ E thru 2</td>
 +1 thru 6</td>
       <td>Viktor Hovland(W) +3
 -1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +3
-+1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 9</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">2</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Collin Morikawa(W) -1
+E thru 2</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas(W) -3
+-2 thru 4</td>
+      <td>Will Zalatoris -2
+-1 thru 2</td>
+      <td>Viktor Hovland +3
+-1 thru 17</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -3
+-2 thru 4</td>
+      <td>Corey Conners -1
+E thru 1</td>
+      <td>Rory McIlroy +2
+E thru 10</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -3
+-2 thru 4</td>
+      <td>Will Zalatoris -2
+-1 thru 2</td>
+      <td>Viktor Hovland +3
+-1 thru 17</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Cameron Smith -2
 E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
-      <td>Jon Rahm(W) +3
-+1 thru 8</td>
       <td>Tiger Woods +3
 +2 thru 7</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
       <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">4</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Patrick Cantlay(W) +2
-+1 thru 6</td>
-      <td>Rory McIlroy +2
-E thru 10</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
@@ -806,41 +790,25 @@ E thru 10</td>
 +1 thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +3
-+1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 9</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">Hasbulla</td>
       <td class="bigbold">5</td>
-      <td>Justin Thomas(W) -3
+      <td>Justin Thomas -3
 -2 thru 4</td>
-      <td>Patrick Cantlay +2
+      <td>Patrick Cantlay(W) +2
 +1 thru 6</td>
-      <td>Viktor Hovland +3
--1 thru 17</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 12</td>
-      <td class="greyout">Xander Schauffele
+      <td>Rory McIlroy +2
+E thru 10</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners(W) -1
-E thru 1</td>
-      <td>Collin Morikawa -1
-E thru 2</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
-      <td>Robert MacIntyre +4
-+2 thru 7</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 12</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -860,16 +828,48 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">6</td>
+      <td>Justin Thomas(W) -3
+-2 thru 4</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td>Viktor Hovland +3
+-1 thru 17</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 12</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">6</td>
+      <td>Corey Conners(W) -1
+E thru 1</td>
+      <td>Collin Morikawa -1
+E thru 2</td>
+      <td>Robert MacIntyre +4
++2 thru 7</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 12</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">7</td>
       <td>Cameron Smith -2
 E thru 1</td>
       <td>Rory McIlroy +2
 E thru 10</td>
-      <td>Jon Rahm(W) +3
-+1 thru 8</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
       <td class="greyout leftborder">Bubba Watson +7
 +5 thru 8</td>
       <td class="greyout">Jordan Spieth
@@ -877,15 +877,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Collin Morikawa -1
 E thru 2</td>
       <td>Viktor Hovland(W) +3
 -1 thru 17</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
       <td>Patrick Reed +3
 E thru 13</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Dustin Johnson -2
 E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 17</td>
-      <td>Jon Rahm +3
-+1 thru 8</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Collin Morikawa -1
 E thru 2</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
-      <td>Jon Rahm(W) +3
-+1 thru 8</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
       <td>Tony Finau +4
 +2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -927,8 +927,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Tony Muir</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas</td>
-      <td class="greyout">Jon Rahm(W)</td>
       <td class="greyout">Viktor Hovland</td>
+      <td class="greyout">Jon Rahm(W)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
@@ -1005,8 +1005,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Chris Bryson</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Jon Rahm(W)</td>
       <td class="greyout">Viktor Hovland</td>
+      <td class="greyout">Jon Rahm(W)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
